--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,14 +31,14 @@ spring.datasource.username=sa
 spring.datasource.password=
 
 #jpa/hibernate
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 spring.sql.init.data-locations=classpath:sql/data.sql
-logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.SQL=DEBUG
 
 #rabbit.queue
 rabbit.reservation.queue=reservation.queue
