--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -4,4 +4,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.sql.init.mode=never
 spring.sql.init.data-locations=
 
+spring.scheduling.enabled=false
+shedlock.enabled=false
 
