--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,6 +31,7 @@ spring.datasource.password=
 
 #jpa/hibernate
 spring.jpa.show-sql=false
+spring.datasource.hikari.maximum-pool-size=50
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
